# cos-graphics

./: .gitignore  CMakeLists.txt  LICENCE  README.md  finder.qaq  font_resource.cgures  image_resource.cgures  resource.cgures  resource.uwu  text_resource.cgures
dependencies/cos-graphics-resource-wrapper/: CMakeLists.txt  resource.cgures
dependencies/cos-graphics-resource-wrapper/include/cg_resource_wrapper/: log.h  resource_wrapper.h
dependencies/cos-graphics-resource-wrapper/src/: log.c  main.c  resource_wrapper.c
dependencies/freetype/macos/: README.md
dependencies/freetype/macos/lib-arm64/lib/: libfreetype.6.dylib  libfreetype.la
dependencies/freetype/macos/lib-arm64/lib/pkgconfig/: freetype2.pc
dependencies/freetype/windows/64/mingw/cmake/freetype/: freetype-config.cmake
dependencies/freetype/windows/64/mingw/pkgconfig/: freetype2.pc
dependencies/freetype/windows/64/msvc/: freetype.lib
dependencies/freetype/windows/64/msvc/cmake/freetype/: freetype-config-version.cmake  freetype-config.cmake
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/macos/: README.md
dependencies/glfw/macos/lib-universal/: libglfw.3.4.dylib
dependencies/glfw/macos/lib-x86_64/: libglfw.3.4.dylib
include/cos_graphics/: defs.h  game.h  game_factory.h  graphics.h  input_handler.h  linked_list.h  log.h  resource.h  resource_ext.h  utils.h  utils.hpp
include/cos_graphics/component/: animation_sprite.h  camera.h  component.h  sprite.h  text.h  text_component.h  texture_container.h  visual_component.h
include/cos_graphics/coroutine/: coroutine.hpp  task.hpp
include/cos_graphics/interface/: rect_boarder.h  rect_shape.h
include/cos_graphics/math/: matrix.hpp
shaders/: default_bitmap_visual_image_shader.frag  default_geo_shader.vert  default_sprite_shader.frag  default_sprite_shader.vert  default_texture_shader.vert  default_visual_image_shader.frag  default_visual_image_shader.vert
src/: defs.h  main.c  main.cpp  test.h
src/component/: CMakeLists.txt  animation_sprite.cpp  camera.cpp  component.cpp  sprite.cpp  text.cpp  text_component.cpp  texture_container.cpp  visual_component.cpp
src/containers/: CMakeLists.txt  link_list.c  link_list.h
src/file_manager/: CMakeLists.txt  file_manager.c  file_manager.h
src/game/: CMakeLists.txt  game.cpp  game_factory.cpp
src/graphics/: CMakeLists.txt  graphics.c  graphics.h  linked_list.c  render_list.c  sprite.h
src/graphics/shaders/: default_geo_shader.frag  default_geo_shader.vert
src/input_handler/: CMakeLists.txt  input_handler.cpp
src/interface/: CMakeLists.txt
src/log/: CMakeLists.txt  log.c  log.h
src/math/: CMakeLists.txt  matrix.cpp
src/resource/: CMakeLists.txt  resource.c  resource_cpp_ext.cpp
src/utils/: CMakeLists.txt  utils.c
test/: CMakeLists.txt  test_main.c
test/test_graphics/: test_graphics.c  test_graphics.h
test/test_resource/: test_resource.c  test_resource.h
test/test_utils/: test_utils.c  test_utils.h
test/unit_test/: unit_test.c  unit_test.h
